ReSharper.FSharp/test/data/parsing/errors/Expr - Unfinished let 04 - In, before other.fs
module Module

do
    let x = 1 in

let x = 1
